# Sentinel

./: App.tsx  CMakeLists.txt  README.md  SentinelCore.cpp  SentinelCore.hpp  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.css  index.html  metadata.json  package-lock.json  package.json  sentinel_fault_observer.py  sentinel_launch.sh  sentinel_lyapunov.py  sentinel_pipeline.py  sentinel_postprocess.py  sentinel_preprocess.py  server.ts  types.ts
components/: AdvisoryPanel.tsx  ComplianceDashboard.tsx  DigitalTwinVisualizer.tsx  FleetConsensusMap.tsx  FormalVerificationPanel.tsx  FtsGovernancePanel.tsx  HardwareAbstractionPanel.tsx  HardwareBridge.tsx  HardwareTestMode.tsx  HealthMetric.tsx  IntegrationTerminal.tsx  JointGovernancePanel.tsx  MissionPhaseManager.tsx  NasaCompliancePanel.tsx  PhysicalManifestUploader.tsx  PtpSyncStatus.tsx  RocketEnginePanel.tsx  RotorGovernancePanel.tsx  SentinelLedger.tsx  TelemetryChart.tsx  TractionGovernancePanel.tsx  ZeroCodeWizard.tsx
public/: ForensicLedger.cpp  SentinelGovernor.hpp
services/: HardwareAbstractionLayer.ts  SentinelRuntime.ts
src/: firebase.ts
